--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <div id="page-landing">
       <div id="container">
         <header>
-          <img class="animate-up" id="logo" src="/images/logo.svg" alt="Logomarca de Happy" />
+          <img
+            class="animate-up"
+            id="logo"
+            src="/images/logo.svg"
+            alt="Logomarca de Happy"
+          />
 
           <div class="location animate-up">
             <strong>Rio do sul</strong>
@@ -29,8 +34,10 @@
         </main>
 
         <section class="visit">
-          <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
-          <a class="animate-up" href="#"
+          <p class="animate-up">
+            Visite orfanatos e mude o dia de muitas crianças
+          </p>
+          <a class="animate-up" href="orphanages.html"
             ><img
               title="Visite orfanatos"
               src="/images/arrow.svg"
