--- a/orphanage.html
+++ b/orphanage.html
@@ -22,9 +22,12 @@
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/page-orphanage.css" />
     <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
+    <link rel="stylesheet" href="/css/map.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
   </head>
   <body>
-    <div id=" onclick="selectImage(event)"">
+    <div id="page-orphanage">
       <aside class="animate-right sidebar">
         <img src="/images/map-marker.svg" alt="Happy" />
 
