--- a/orphanages.html
+++ b/orphanages.html
@@ -41,7 +41,7 @@
 
       <div id="mapid" class="animate-appear"></div>
       <a
-        href="create-orphanages.html"
+        href="create-orphanage.html"
         class="create-orphanage"
         title="Cadastre um orfanato"
       >
